--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@
 }
 
 .ql-toolbar.ql-snow + .ql-container.ql-snow {
-  @apply rounded-b-md !border-primary-200 !border-2;
+  @apply rounded-b-md !border-primary-200 !border-2 md:h-[40vh] h-[35vh];
 }
 
 input[type="number"] {
