--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,10 @@
   @apply border-primary-200 focus:ring-0 rounded-md border-2 focus:outline-none focus:border-primary-700 outline-none px-3 py-2 w-full bg-inherit text-sm text-secondary-500;
 }
 
+.no_input_outline {
+  @apply focus:border focus:ring-0;
+}
+
 @layer utilities {
   @layer utilities {
     /* Hide scrollbar for Chrome, Safari and Opera */
@@ -58,7 +62,7 @@ input[type="number"] {
 
 /*----------------------Tables----------------*/
 .table {
-  @apply w-full  lg:text-base text-sm md:text-base font-semibold text-left;
+  @apply w-full lg:text-base text-sm md:text-base font-semibold text-left;
 }
 
 .table_head {
@@ -254,5 +258,5 @@ input[type="number"] {
 }
 
 .code-input-bg {
-  @apply flex flex-col items-center justify-center min-h-screen bg-primary-50;
+  @apply flex flex-col items-center justify-center min-h-dvh bg-primary-50;
 }
